--- a/package.json
+++ b/package.json
@@ -41,19 +41,19 @@
     "@intlify/unplugin-vue-i18n": "^6.0.0",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/typography": "^0.5.15",
+    "@tailwindcss/vite": "4.0.0-beta.3",
     "@vueuse/components": "^11.3.0",
     "@vueuse/core": "^11.3.0",
     "@vueuse/integrations": "^11.3.0",
     "@vueuse/router": "^11.3.0",
     "ansi-to-html": "^0.7.2",
-    "autoprefixer": "^10.4.20",
     "d3-array": "^3.2.4",
     "d3-ease": "^3.0.1",
     "d3-scale": "^4.0.2",
     "d3-selection": "^3.0.0",
     "d3-shape": "^3.2.0",
     "d3-transition": "^3.0.1",
-    "daisyui": "^4.12.14",
+    "daisyui": "5.0.0-alpha.40",
     "date-fns": "^4.1.0",
     "entities": "^5.0.0",
     "fuse.js": "^7.0.0",
@@ -63,7 +63,7 @@
     "sortablejs": "^1.15.4",
     "splitpanes": "^3.1.5",
     "strip-ansi": "^7.1.0",
-    "tailwindcss": "^3.4.15",
+    "tailwindcss": "4.0.0-beta.3",
     "unplugin-auto-import": "^0.18.5",
     "unplugin-icons": "^0.20.1",
     "unplugin-vue-components": "^0.27.4",
